FIX：优化 runUi 控制台体验